@@ -1,3 +1,12 @@
+2008-07-16  David Zeuthen  <davidz@redhat.com>
+
+	* monitor/proxy/gproxyvolumemonitor.c:
+	* monitor/proxy/gproxyvolumemonitor.h:
+	* monitor/proxy/remote-volume-monitor-module.c:
+	Avoid setting up proxy volume monitors if no session bus is
+	available. Fixes a crasher with the Fedora NetworkManager system
+	settings plug-in that is now using GIO to do file monitoring.
+
 2008-07-08  David Zeuthen  <davidz@redhat.com>
 
 	* monitor/hal/Makefile.am: Fix 'make distcheck'.
